fix(Checkbox): checked icon color to remain white on dark mode

--- a/packages/bee-q/src/components/checkbox/scss/bq-checkbox.scss
+++ b/packages/bee-q/src/components/checkbox/scss/bq-checkbox.scss
@@ -9,7 +9,7 @@
 }
 
 .bq-checkbox {
-  @apply inline-flex cursor-pointer select-none space-x-xs rounded-s p-xs transition-colors duration-300;
+  @apply inline-flex cursor-pointer select-none rounded-s p-xs transition-colors duration-300 ease-in-out;
 
   // Default hover state
   &:not(.is-checked),
